@@ -76,16 +76,15 @@ import org.junit.jupiter.api.Test;
 import org.opensearch.sql.ast.dsl.AstDSL;
 import org.opensearch.sql.ast.expression.Argument;
 import org.opensearch.sql.ast.expression.DataType;
-import org.opensearch.sql.ast.expression.Field;
 import org.opensearch.sql.ast.expression.HighlightFunction;
 import org.opensearch.sql.ast.expression.Literal;
 import org.opensearch.sql.ast.expression.ParseMethod;
+import org.opensearch.sql.ast.expression.PatternMethod;
 import org.opensearch.sql.ast.expression.ScoreFunction;
 import org.opensearch.sql.ast.expression.SpanUnit;
 import org.opensearch.sql.ast.tree.AD;
 import org.opensearch.sql.ast.tree.CloseCursor;
 import org.opensearch.sql.ast.tree.FetchCursor;
-import org.opensearch.sql.ast.tree.FillNull;
 import org.opensearch.sql.ast.tree.Kmeans;
 import org.opensearch.sql.ast.tree.ML;
 import org.opensearch.sql.ast.tree.Paginate;
@@ -160,12 +159,7 @@ class AnalyzerTest extends AnalyzerTestBase {
 
     ExpressionEvaluationException exception =
         assertThrows(ExpressionEvaluationException.class, () -> analyze(typeMismatchPlan));
-    assertEquals(
-        "= function expected {[BYTE,BYTE],[SHORT,SHORT],[INTEGER,INTEGER],[LONG,LONG],"
-            + "[FLOAT,FLOAT],[DOUBLE,DOUBLE],[STRING,STRING],[BOOLEAN,BOOLEAN],[DATE,DATE],"
-            + "[TIME,TIME],[TIMESTAMP,TIMESTAMP],[INTERVAL,INTERVAL],[IP,IP],"
-            + "[STRUCT,STRUCT],[ARRAY,ARRAY]}, but got [STRING,INTEGER]",
-        exception.getMessage());
+    assertEquals(getIncompatibleTypeErrMsg(STRING, INTEGER), exception.getMessage());
   }
 
   @Test
@@ -531,7 +525,7 @@ class AnalyzerTest extends AnalyzerTestBase {
     List<NamedExpression> projectList =
         List.of(
             new NamedExpression(
-                "nested(message.info)", DSL.nested(DSL.ref("message.info", STRING)), null));
+                "nested(message.info)", DSL.nested(DSL.ref("message.info", STRING))));
 
     assertAnalyzeEqual(
         LogicalPlanDSL.project(
@@ -704,8 +698,7 @@ class AnalyzerTest extends AnalyzerTestBase {
         List.of(
             new NamedExpression(
                 "nested(message.info)",
-                DSL.nested(DSL.ref("message.info", STRING), DSL.ref("message", STRING)),
-                null));
+                DSL.nested(DSL.ref("message.info", STRING), DSL.ref("message", STRING))));
 
     assertAnalyzeEqual(
         LogicalPlanDSL.project(
@@ -734,7 +727,7 @@ class AnalyzerTest extends AnalyzerTestBase {
     List<NamedExpression> projectList =
         List.of(
             new NamedExpression(
-                "nested(message.info.id)", DSL.nested(DSL.ref("message.info.id", STRING)), null));
+                "nested(message.info.id)", DSL.nested(DSL.ref("message.info.id", STRING))));
 
     assertAnalyzeEqual(
         LogicalPlanDSL.project(
@@ -764,9 +757,9 @@ class AnalyzerTest extends AnalyzerTestBase {
     List<NamedExpression> projectList =
         List.of(
             new NamedExpression(
-                "nested(message.info)", DSL.nested(DSL.ref("message.info", STRING)), null),
+                "nested(message.info)", DSL.nested(DSL.ref("message.info", STRING))),
             new NamedExpression(
-                "nested(comment.data)", DSL.nested(DSL.ref("comment.data", STRING)), null));
+                "nested(comment.data)", DSL.nested(DSL.ref("comment.data", STRING))));
 
     assertAnalyzeEqual(
         LogicalPlanDSL.project(
@@ -1377,58 +1370,6 @@ class AnalyzerTest extends AnalyzerTestBase {
   }
 
   @Test
-  public void parse_relation_with_patterns_expression() {
-    Map<String, Literal> arguments =
-        ImmutableMap.<String, Literal>builder()
-            .put("new_field", AstDSL.stringLiteral("custom_field"))
-            .put("pattern", AstDSL.stringLiteral("custom_pattern"))
-            .build();
-
-    assertAnalyzeEqual(
-        LogicalPlanDSL.project(
-            LogicalPlanDSL.relation("schema", table),
-            ImmutableList.of(DSL.named("string_value", DSL.ref("string_value", STRING))),
-            ImmutableList.of(
-                DSL.named(
-                    "custom_field",
-                    DSL.patterns(
-                        DSL.ref("string_value", STRING),
-                        DSL.literal("custom_pattern"),
-                        DSL.literal("custom_field"))))),
-        AstDSL.project(
-            AstDSL.parse(
-                AstDSL.relation("schema"),
-                ParseMethod.PATTERNS,
-                AstDSL.field("string_value"),
-                AstDSL.stringLiteral("custom_pattern"),
-                arguments),
-            AstDSL.alias("string_value", qualifiedName("string_value"))));
-  }
-
-  @Test
-  public void parse_relation_with_patterns_expression_no_args() {
-    assertAnalyzeEqual(
-        LogicalPlanDSL.project(
-            LogicalPlanDSL.relation("schema", table),
-            ImmutableList.of(DSL.named("string_value", DSL.ref("string_value", STRING))),
-            ImmutableList.of(
-                DSL.named(
-                    "patterns_field",
-                    DSL.patterns(
-                        DSL.ref("string_value", STRING),
-                        DSL.literal(""),
-                        DSL.literal("patterns_field"))))),
-        AstDSL.project(
-            AstDSL.parse(
-                AstDSL.relation("schema"),
-                ParseMethod.PATTERNS,
-                AstDSL.field("string_value"),
-                AstDSL.stringLiteral(""),
-                ImmutableMap.of()),
-            AstDSL.alias("string_value", qualifiedName("string_value"))));
-  }
-
-  @Test
   public void kmeanns_relation() {
     Map<String, Literal> argumentMap =
         new HashMap<String, Literal>() {
@@ -1454,14 +1395,11 @@ class AnalyzerTest extends AnalyzerTestBase {
             ImmutablePair.of(
                 DSL.ref("int_null_value", INTEGER),
                 DSL.ifnull(DSL.ref("int_null_value", INTEGER), DSL.literal(0)))),
-        new FillNull(
+        AstDSL.fillNull(
             AstDSL.relation("schema"),
-            FillNull.ContainNullableFieldFill.ofSameValue(
-                AstDSL.intLiteral(0),
-                ImmutableList.<Field>builder()
-                    .add(AstDSL.field("integer_value"))
-                    .add(AstDSL.field("int_null_value"))
-                    .build())));
+            AstDSL.intLiteral(0),
+            AstDSL.field("integer_value"),
+            AstDSL.field("int_null_value")));
   }
 
   @Test
@@ -1475,14 +1413,11 @@ class AnalyzerTest extends AnalyzerTestBase {
             ImmutablePair.of(
                 DSL.ref("int_null_value", INTEGER),
                 DSL.ifnull(DSL.ref("int_null_value", INTEGER), DSL.literal(1)))),
-        new FillNull(
+        AstDSL.fillNull(
             AstDSL.relation("schema"),
-            FillNull.ContainNullableFieldFill.ofVariousValue(
-                ImmutableList.of(
-                    new FillNull.NullableFieldFill(
-                        AstDSL.field("integer_value"), AstDSL.intLiteral(0)),
-                    new FillNull.NullableFieldFill(
-                        AstDSL.field("int_null_value"), AstDSL.intLiteral(1))))));
+            List.of(
+                Pair.of(AstDSL.field("integer_value"), AstDSL.intLiteral(0)),
+                Pair.of(AstDSL.field("int_null_value"), AstDSL.intLiteral(1)))));
   }
 
   @Test
@@ -1870,5 +1805,118 @@ class AnalyzerTest extends AnalyzerTestBase {
         () -> assertTrue(analyzed.getChild().get(0) instanceof LogicalFetchCursor),
         () ->
             assertEquals("pewpew", ((LogicalFetchCursor) analyzed.getChild().get(0)).getCursor()));
+  }
+
+  @Test
+  public void parse_relation_with_patterns_expression() {
+    Map<String, Literal> arguments =
+        ImmutableMap.<String, Literal>builder()
+            .put("new_field", AstDSL.stringLiteral("custom_field"))
+            .put("pattern", AstDSL.stringLiteral("custom_pattern"))
+            .build();
+
+    assertAnalyzeEqual(
+        LogicalPlanDSL.project(
+            LogicalPlanDSL.relation("schema", table),
+            ImmutableList.of(DSL.named("string_value", DSL.ref("string_value", STRING))),
+            ImmutableList.of(
+                DSL.named(
+                    "custom_field",
+                    DSL.patterns(
+                        DSL.ref("string_value", STRING),
+                        DSL.literal("custom_pattern"),
+                        DSL.literal("custom_field"))))),
+        AstDSL.project(
+            AstDSL.parse(
+                AstDSL.relation("schema"),
+                ParseMethod.PATTERNS,
+                AstDSL.field("string_value"),
+                AstDSL.stringLiteral("custom_pattern"),
+                arguments),
+            AstDSL.alias("string_value", qualifiedName("string_value"))));
+  }
+
+  @Test
+  public void parse_relation_with_patterns_expression_no_args() {
+    assertAnalyzeEqual(
+        LogicalPlanDSL.project(
+            LogicalPlanDSL.relation("schema", table),
+            ImmutableList.of(DSL.named("string_value", DSL.ref("string_value", STRING))),
+            ImmutableList.of(
+                DSL.named(
+                    "patterns_field",
+                    DSL.patterns(
+                        DSL.ref("string_value", STRING),
+                        DSL.literal(""),
+                        DSL.literal("patterns_field"))))),
+        AstDSL.project(
+            AstDSL.parse(
+                AstDSL.relation("schema"),
+                ParseMethod.PATTERNS,
+                AstDSL.field("string_value"),
+                AstDSL.stringLiteral(""),
+                ImmutableMap.of()),
+            AstDSL.alias("string_value", qualifiedName("string_value"))));
+  }
+
+  @Test
+  public void brain_patterns_command_with_no_additional_args() {
+    UnresolvedPlan patterns =
+        AstDSL.project(
+            AstDSL.patterns(
+                AstDSL.relation("schema"),
+                PatternMethod.BRAIN,
+                AstDSL.field("string_value"),
+                "patterns_field",
+                ImmutableList.of()),
+            AstDSL.field("string_value"));
+    LogicalPlan expectedPlan =
+        LogicalPlanDSL.project(
+            LogicalPlanDSL.window(
+                LogicalPlanDSL.relation("schema", table),
+                DSL.named(
+                    "patterns_field", DSL.brain(DSL.ref("string_value", STRING)), "patterns_field"),
+                new WindowDefinition(ImmutableList.of(), ImmutableList.of())),
+            DSL.named("string_value", DSL.ref("string_value", STRING)));
+
+    assertAnalyzeEqual(expectedPlan, patterns);
+  }
+
+  @Test
+  public void brain_patterns_command() {
+    UnresolvedPlan patterns =
+        AstDSL.project(
+            AstDSL.patterns(
+                AstDSL.relation("schema"),
+                PatternMethod.BRAIN,
+                AstDSL.field("string_value"),
+                "custom_field",
+                ImmutableList.of(
+                    new Argument(
+                        "variable_count_threshold", AstDSL.intLiteral(10)), // with integer argument
+                    new Argument(
+                        "frequency_threshold_percentage",
+                        AstDSL.doubleLiteral(0.1)) // with double argument
+                    )),
+            AstDSL.field("string_value"));
+    LogicalPlan expectedPlan =
+        LogicalPlanDSL.project(
+            LogicalPlanDSL.window(
+                LogicalPlanDSL.relation("schema", table),
+                DSL.named(
+                    "custom_field",
+                    DSL.brain(
+                        DSL.ref("string_value", STRING),
+                        DSL.namedArgument(
+                            "variable_count_threshold",
+                            DSL.literal(10)), // with additional integer argument
+                        DSL.namedArgument(
+                            "frequency_threshold_percentage",
+                            DSL.literal(0.1))), // with additional double argument
+                    "custom_field"),
+                new WindowDefinition(ImmutableList.of(), ImmutableList.of())),
+            DSL.named("string_value", DSL.ref("string_value", STRING)));
+
+    assertAnalyzeEqual(expectedPlan, patterns);
   }
 }
